# esp32-wake-word

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  hello_world_main.cpp  idf_component.yml
main/esp_mfcc/: mfcc.c  mfcc.h
main/esp_wake_word_detector/: CMakeLists.txt  idf_component.yml
main/esp_wake_word_detector/include/: esp_wake_word_detector.hpp
main/esp_wake_word_detector/src/: esp_wake_word_detector.cpp
main/esp_wav/: esp_wav.cpp  esp_wav.hpp
main/ring_buffer/: ring_buffer.c  ring_buffer.h
ml_models/: ctc.py  main.py  output.txt  output_stacked.txt  test.py  xiaoa.espdl  xiaoa.info  xiaoa.json  xiaoa.onnx  xiaoa.txt  xiaoa875_no.espdl
ml_models/model/esp/: xiaoa.espdl  xiaoa075.espdl  xiaoa95.espdl
ml_models/model/onnx/: xiaoa.onnx  xiaoa95.onnx
ml_models/model/pytorch/: xiaoa95.pth
ml_models/src/: extract_mfcc.py  output_stacked.txt  painter.py  wakeDataset.py  wakeLoss.py  wakeModel.py
ml_models/test/: quantize_test.py  test.py  test_xiaoa.py
ml_models/tool/: changename.py  noise_data_maker.py  quantize.py
model/esp32p4/: wake_word_model.espdl  xiaoa_noise.espdl  xiaoa_p4.espdl
model/esp32s3/: xiaoa.espdl  xiaoa08.espdl  xiaoa100.espdl  xiaoa_16000_08.espdl  xiaoa_maxpool_100.espdl
